Fix: Small style bugs found on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,6 +50,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--color-background);
 }
 
 body {
@@ -119,6 +120,7 @@ input[type="text"] {
   border: 1px solid var(--color-foreground);
   color: var(--color-foreground);
   padding: 8px;
+  font-size: 1rem;
 }
 
 main aside {
